[gd_scene load_steps=18 format=3 uid="uid://ighjye8pwkar"]

[ext_resource type="Script" path="res://scripts/inimigo.gd" id="1_06yhj"]
[ext_resource type="Texture2D" uid="uid://bnjsw6rdtjtf3" path="res://sprites/oposum.png" id="1_u7af3"]
[ext_resource type="Texture2D" uid="uid://dq0aa48n7erjx" path="res://sprites/enemy-deadth.png" id="2_vfdvs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s3kmd"]
atlas = ExtResource("2_vfdvs")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsh4j"]
atlas = ExtResource("2_vfdvs")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_vinno"]
atlas = ExtResource("2_vfdvs")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_rd4cl"]
atlas = ExtResource("2_vfdvs")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fhk3"]
atlas = ExtResource("2_vfdvs")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_6djie"]
atlas = ExtResource("2_vfdvs")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_wp3mf"]
atlas = ExtResource("1_u7af3")
region = Rect2(36, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_6y8om"]
atlas = ExtResource("1_u7af3")
region = Rect2(72, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmdoq"]
atlas = ExtResource("1_u7af3")
region = Rect2(108, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2yi1"]
atlas = ExtResource("1_u7af3")
region = Rect2(144, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_u443b"]
atlas = ExtResource("1_u7af3")
region = Rect2(180, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqqbe"]
atlas = ExtResource("1_u7af3")
region = Rect2(0, 0, 36, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_tfaoy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3kmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsh4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vinno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rd4cl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fhk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6djie")
}],
"loop": false,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wp3mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6y8om")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmdoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2yi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u443b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqqbe")
}],
"loop": true,
"name": &"walking",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_axpni"]
size = Vector2(25, 20)

[node name="Opusum" type="Node2D"]
script = ExtResource("1_06yhj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tfaoy")
animation = &"walking"
autoplay = "walking"

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-2, 4)
target_position = Vector2(-20, 0)
collision_mask = 8

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(-2, 4)
target_position = Vector2(20, 0)
collision_mask = 8

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-4.5, 4)
shape = SubResource("RectangleShape2D_axpni")

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Killzone" to="." method="_on_killzone_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
